--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "start-fake-server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.2",
     "@tailwindcss/vite": "^4.1.14",
+    "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.3",
+    "react-router-dom": "^7.9.4",
     "redux": "^5.0.1",
     "tailwindcss": "^4.1.14"
   },
